--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "express": "^4.16.4",
     "mongoose": "^5.4.5",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "react-router-dom": "^4.3.1"
   }
 }
