--- a/package.json
+++ b/package.json
@@ -39,7 +39,11 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "@material-ui/core": "^3.9.0",
+    "@material-ui/icons": "^3.0.2",
+    "@material-ui/styles": "^3.0.0-alpha.8",
     "axios": "^0.18.0",
+    "classnames": "^2.2.6",
     "express": "^4.16.4",
     "mongoose": "^5.4.5",
     "react": "^16.7.0",
