--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,5 @@
 {
-  "presets": [
-    "@babel/preset-env",
-    "@babel/react"
-  ],
+  "presets": ["@babel/preset-env", "@babel/react"],
   "plugins": [
     "transform-class-properties",
     "transform-object-rest-spread",
