--- a/package.json
+++ b/package.json
@@ -40,8 +40,15 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "bcryptjs": "^2.4.3",
     "express": "^4.16.4",
+    "express-graphql": "^0.7.1",
+    "graphql": "^14.1.1",
+    "gravatar": "^1.8.0",
+    "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.5",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1"
