--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "express": "^4.16.4",
+    "material-design-icons": "^3.0.1",
     "mongoose": "^5.4.5",
+    "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-apexcharts": "^1.2.1",
     "react-dom": "^16.7.0",
