--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "react": "^16.7.0",
     "react-apexcharts": "^1.2.1",
     "react-dom": "^16.7.0",
-    "react-router-dom": "^4.3.1",
-    "recharts": "^1.4.2"
+    "react-router-dom": "^4.3.1"
   }
 }
