--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,9 +6,15 @@
   "configurations": [
     {
       "type": "node",
+      "request": "attach",
+      "name": "Attach",
+      "protocol": "inspector"
+    },
+    {
+      "type": "node",
       "request": "launch",
-      "name": "Debug Server",
-      "program": "${workspaceFolder}/server/index.js"
+      "name": "Launch Program",
+      "program": "${workspaceFolder}/index.js"
     }
   ]
 }
