--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
     "classnames": "^2.2.6",
     "express": "^4.16.4",
     "mongoose": "^5.4.5",
+    "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "react-transition-group": "^2.5.3"
   }
 }
