--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "classnames": "^2.2.6",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
     "graphql": "^14.1.1",
