--- a/package.json
+++ b/package.json
@@ -65,8 +65,7 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
-    "react-router-dom": "^4.3.1",
+    "redux-thunk": "^2.3.0",
     "react-transition-group": "^2.5.3"
   }
 }
