--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,7 @@
   "presets": ["@babel/preset-env", "@babel/react"],
   "plugins": [
     "transform-class-properties",
-    "transform-object-rest-spread",
+    "@babel/plugin-proposal-object-rest-spread",
     "react-hot-loader/babel"
   ]
 }
