--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "concurrently": "^4.1.0",
     "css-loader": "^2.1.0",
     "eslint": "^5.12.1",
@@ -65,8 +65,7 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
-    "react-router-dom": "^4.3.1",
+    "redux-thunk": "^2.3.0",
     "react-transition-group": "^2.5.3"
   }
 }
