--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
     "graphql": "^14.1.1",
+    "graphql-iso-date": "^3.6.1",
     "graphql-tools": "^4.0.4",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.4.0",
@@ -64,8 +65,8 @@
     "react-gravatar": "^2.6.3",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
+    "react-transition-group": "^2.5.3",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
-    "react-transition-group": "^2.5.3"
+    "redux-thunk": "^2.3.0"
   }
 }
