--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-hot-loader": "^4.6.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14"
@@ -64,9 +65,8 @@
     "react-gravatar": "^2.6.3",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
+    "react-transition-group": "^2.5.3",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
-    "react-router-dom": "^4.3.1",
-    "react-transition-group": "^2.5.3"
   }
 }
