--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,12 +8,12 @@
       "type": "node",
       "request": "attach",
       "name": "Attach",
-      "protocol": "inspector"
+      "port": 9229
     },
     {
       "type": "node",
       "request": "launch",
-      "name": "Launch Program",
+      "name": "Launch Backend Server",
       "program": "${workspaceFolder}/server/index.js"
     }
   ]
