--- a/package.json
+++ b/package.json
@@ -48,11 +48,11 @@
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "classnames": "^2.2.6",
+    "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
     "graphql": "^14.1.1",
-    "graphql-iso-date": "^3.6.1",
     "graphql-tools": "^4.0.4",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.4.0",
@@ -67,6 +67,7 @@
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-transition-group": "^2.5.3",
+    "recompose": "^0.30.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   }
