data in Grid3Col is now being displayed from the database

--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,6 @@
   "plugins": [
     "transform-class-properties",
     "@babel/plugin-proposal-object-rest-spread",
-    "react-hot-loader/babel"
+    "react-hot-loader/babel",
   ]
 }
