--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "concurrently": "^4.1.0",
     "css-loader": "^2.1.0",
     "eslint": "^5.12.1",
@@ -41,6 +42,7 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.2.5",
     "@material-ui/core": "^3.9.0",
     "@material-ui/icons": "^3.0.2",
     "@material-ui/styles": "^3.0.0-alpha.8",
