--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "graphql-tools": "^4.0.4",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.4.0",
+    "moment": "^2.24.0",
     "mongoose": "^5.4.5",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
