--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@material-ui/core": "^3.9.0",
     "@material-ui/icons": "^3.0.2",
     "@material-ui/styles": "^3.0.0-alpha.8",
+    "@material-ui/system": "^3.0.0-alpha.2",
     "apexcharts": "^3.2.1",
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
