--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-transition-group": "^2.5.3",
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "validator": "^10.11.0"
   }
 }
