added backend validation

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,8 @@
   },
   "rules": {
     "no-underscore-dangle": "off",
-    "no-param-reassign": "off"
+    "no-param-reassign": "off",
+    "no-return-assign":"off",
+    "consistent-return":"off"
   }
 }
