--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "graphql-tools": "^4.0.4",
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.4.0",
+    "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "mongoose": "^5.4.5",
     "passport": "^0.4.0",
