--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "lint": "eslint ./",
     "lint:fix": "eslint ./ --fix",
+    "start": "node ./server/index.js",
     "start:dev": "concurrently \"nodemon --inspect=9229 ./server/index.js --ignore 'client/*'\" \"webpack-dev-server --hot --mode development --watch\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev-server": "webpack-dev-server --hot --mode development --watch",
